[package]
name = "LogParser"
version = "0.1.0"
edition = "2024"
build = "compile_proto.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
prost = "0.14.3"
bytes = "1.11.1"
rayon = "1.11.0"
prost-reflect = { version = "0.16.3", features = ["derive"] }
once_cell = "1.21.4"

[build-dependencies]
glob = "0.3.3"
prost-reflect-build = "0.16.0"

[lints.clippy]
needless_return = "allow"
